scrollbar bug resolved

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,14 +35,11 @@
   .contentContainer {
     margin-top: 5vh;
     /* width: max-content; */
-    width: 100vw;
-    padding: 2vw;
+    width: 100%;
     padding-bottom: 3vw;
 
     background-color: #22333b;
     color: #eae0d5;
-
-    border-radius: 30px;
   }
 
   .contentContainer > h2 {
